--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(tv_count)
 export(tv_lvcf)
 export(tv_max)
 export(tv_mean)
+export(tv_median)
 export(tv_min)
 export(tv_sum)
 export(tv_ts)
