--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: tv
 Title: Tools for creating time-varying datasets
-Version: 1.2.3
-Date: 2022-12-20
+Version: 1.3.0
+Date: 2023-01-09
 Authors@R: c(
     person("Ethan", "Heinzen", email = "heinzen.ethan@mayo.edu", role = c("aut", "cre")),
     person("Patrick", "Wilson", role="ctb"),
@@ -11,7 +11,8 @@ Description: Tools for creating time-varying datasets.
 Suggests:
     knitr,
     tibble,
-    rmarkdown
+    rmarkdown,
+    testthat (>= 3.0.0)
 Imports:
     lubridate,
     purrr,
@@ -26,3 +27,4 @@ License: GPL (>= 2)
 RoxygenNote: 7.1.2
 LazyData: true
 Encoding: UTF-8
+Config/testthat/edition: 3
