--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,7 @@ Suggests:
     testthat (>= 3.0.0)
 Imports:
     lubridate,
-    dplyr,
+    dplyr (>= 1.1.1),
     magrittr,
     rlang
 Depends:
