--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: tv
 Title: Tools for Creating Time-Varying Datasets
-Version: 2.0.1
-Date: 2023-11-03
+Version: 2.0.2
+Date: 2024-02-16
 Authors@R: c(
     person("Ethan", "Heinzen", email = "heinzen.ethan@mayo.edu", role = c("aut", "cre")),
     person("Patrick", "Wilson", role="ctb"),
-    person("Brendan", "Broderick", role="ctb")
+    person("Brendan", "Broderick", role="ctb"),
+    person("Peter", "Martin", role="ctb")
   )
 Description: Create a time-varying dataset using features, exposure, and
     look back specifications.
