--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: tv
 Title: Tools for Creating Time-Varying Datasets
-Version: 2.0.2
+Version: 2.1.0
 Date: 2024-02-16
 Authors@R: c(
     person("Ethan", "Heinzen", email = "heinzen.ethan@mayo.edu", role = c("aut", "cre")),
@@ -19,6 +19,7 @@ Imports:
     lubridate,
     dplyr (>= 1.1.1),
     magrittr,
+    parallelly,
     rlang
 Depends:
     R (>= 3.6.0)
